syntax = "proto3";

message product {
    string name = 1;
}

message CreateProductRequest {
    string name = 1;
}

service ProductService {
    rpc createProduct(CreateProductRequest) returns (product) {}
}